# elm-websocket

./: CHANGELOG.md  LICENSE  Makefile  README.md  elm-websocket.cabal  stack.yaml
example/client/: elm-package.json
example/client/assets/: example-app.css  index.html
example/client/src/: ExampleApp.elm  ExampleSparklines.elm  Model.elm  State.elm  Styles.elm  View.elm
example/client/src/CreateTask/: Model.elm  State.elm  View.elm
example/client/src/Page/: CreateTaskPage.elm  ViewTaskPage.elm
example/client/src/ViewTask/: View.elm
example/code-generator/: Main.hs
example/server/shared/: Api.hs
example/server/src/: Main.hs
src/Elm/: Export.hs  WebSocket.hs
src/Elm/Export/: Common.hs  Decoder.hs  Encoder.hs  File.hs  Record.hs  Type.hs  WebSocketSubscriber.hs
src/Elm/WebSocket/: Server.hs  Types.hs
test/: BroadcastSpec.hs  RequestResponseSpec.hs
