name:                elm-websocket
version:             0.1
synopsis:            Generate ELM code from a Wai websocket application.
description:         Please see README.md
homepage:            http://github.com/rhyskeepence/elm-websocket
license:             BSD3
license-file:        LICENSE
author:              Rhys Keepence
maintainer:          rhyskeepence@gmail.com
copyright:           2017 Rhys Keepence
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Elm.WebSocket
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , concurrent-extra
                     , lens
                     , text
                     , wai
                     , wai-websockets
                     , websockets

  ghc-options:         -Wall
  default-language:    Haskell2010
  other-modules:       Elm.WebSocket.Server
                     , Elm.WebSocket.Types

test-suite elm-websocket-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , concurrent-extra
                     , elm-websocket
                     , hspec
                     , http-types
                     , mtl
                     , network
                     , text
                     , wai
                     , websockets
                     , warp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:       BroadcastSpec
                     , RequestResponseSpec

source-repository head
  type:     git
  location: https://github.com/rhyskeepence/elm-websocket

